force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object use to create form question along with question type and related to Question Group(Section) and Form Questionnaires(junction object)</description>
    <label>Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>