force-app/main/default/objects/Question__c/fields/Allow_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For check, Allow for Attachments</description>
    <inlineHelpText>For check, Allow for Attachments</inlineHelpText>
    <label>Allow_Attachments</label>
    <type>Checkbox</type>
</CustomField>