force-app/main/default/objects/Question__c/fields/Allow_Comment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin allows to user add a comment on the question.</description>
    <label>Allow Comment</label>
    <type>Checkbox</type>
</CustomField>