force-app/main/default/objects/Question__c/fields/Allow_Multiple_Files__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to allow upload of multiple files for question.</description>
    <inlineHelpText>Check this field to allow upload of multiple files for question.</inlineHelpText>
    <label>Allow Multiple Files</label>
    <type>Checkbox</type>
</CustomField>