force-app/main/default/objects/Question__c/fields/Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Currency_Symbol__c</fullName>
    <description>Admin can set currency on Question</description>
    <label>Currency Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>