force-app/main/default/objects/Question__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>admin set Default Value for slider input</description>
    <label>Default Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>