force-app/main/default/objects/Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Question Help Text</description>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>