force-app/main/default/objects/Question__c/fields/Help_Text_Required__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow admin to enter help text of question when checkbox checked.</description>
    <label>Help Text Required</label>
    <type>Checkbox</type>
</CustomField>