force-app/main/default/objects/Question__c/fields/Is_Approve_For_Library__c.field-meta.xml
<CustomField>
    <fullName>Is_Approve_For_Library__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the question is approve or not for the library.</description>
    <inlineHelpText>Check the question is approve or not for the library.</inlineHelpText>
    <label>Is Approve For Library</label>
    <type>Checkbox</type>
</CustomField>