force-app/main/default/objects/Question__c/fields/is_Delete__c.field-meta.xml
<CustomField>
    <fullName>is_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when question deleted .</description>
    <inlineHelpText>Checked when question deleted .</inlineHelpText>
    <label>is Delete</label>
    <type>Checkbox</type>
</CustomField>