force-app/main/default/objects/Question__c/fields/Is_MultiSelect__c.field-meta.xml
<CustomField>
    <fullName>Is_MultiSelect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MultiSelect</label>
    <type>Checkbox</type>
</CustomField>