force-app/main/default/objects/Question__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Question label</description>
    <label>Question Label</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>