force-app/main/default/objects/Question__c/fields/Max_Char_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Char_Length__c</fullName>
    <description>Admin can specify the max char length of the text associated with that question in a questionnaire.</description>
    <label>Max Char Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>