force-app/main/default/objects/Question__c/fields/Maximum_value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_value__c</fullName>
    <description>admin can set maximum value for slider</description>
    <label>Maximum value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>