force-app/main/default/objects/Question__c/fields/No_Of_Columns__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Columns__c</fullName>
    <description>Define which question related to particular column number.</description>
    <label>No Of Columns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>