force-app/main/default/objects/Question__c/fields/Question_Library__c.field-meta.xml
<CustomField>
    <fullName>Question_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Question Library</description>
    <label>Question Library</label>
    <referenceTo>Question_Library__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>