force-app/main/default/objects/Question__c/fields/Step_Size__c.field-meta.xml
<CustomField>
    <fullName>Step_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>admin set step size for slider input</description>
    <label>Step Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>