force-app/main/default/objects/Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Set a Question Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TextPlain</fullName>
                <label>Plain Text</label>
            </value>
            <value>
                <fullName>RichText</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
                <label>Number/Currency</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
                <label>Information/Instruction</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>GPS Location</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Header/Footer</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
                <label>Time Picklist</label>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
            <value>
                <fullName>GPSLocate</fullName>
                <isActive>false</isActive>
                <label>GPS Locate</label>
            </value>
            <value>
                <fullName>MultiSelect</fullName>
                <isActive>false</isActive>
                <label>MultiSelect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>